Add decision-making functionality with user registration and login features