@@ -5,14 +5,16 @@ import com.eojeda89.decididorapi.application.port.in.MakeDecisionUseCase;
 import com.eojeda89.decididorapi.application.port.in.command.DecideCommand;
 import com.eojeda89.decididorapi.application.port.in.result.DecisionResult;
 import com.eojeda89.decididorapi.application.port.out.DecisionRepository;
+import com.eojeda89.decididorapi.common.exception.Exceptions;
 import com.eojeda89.decididorapi.domain.model.*;
 import com.eojeda89.decididorapi.domain.service.DecisionAlgorithm;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 @Service
 @RequiredArgsConstructor
@@ -25,20 +27,20 @@ public class DecisionService implements MakeDecisionUseCase, GetDecisionHistoryU
     public DecisionResult decide(DecideCommand command) {
         Objects.requireNonNull(command, "command");
         if (command.getOptionValues() == null || command.getOptionValues().size() < 2) {
-            throw new com.eojeda89.decididorapi.common.exception.Exceptions.InvalidRequestException("At least 2 options are required");
+            throw new Exceptions.InvalidRequestException("At least 2 options are required");
         }
         if (command.getAlgorithmType() == null) {
-            throw new com.eojeda89.decididorapi.common.exception.Exceptions.InvalidRequestException("algorithmType is required");
+            throw new Exceptions.InvalidRequestException("algorithmType is required");
         }
         DecisionAlgorithm algorithm = algorithms.get(command.getAlgorithmType());
         if (algorithm == null) {
-            throw new com.eojeda89.decididorapi.common.exception.Exceptions.UnsupportedAlgorithmException("Unsupported algorithm: " + command.getAlgorithmType());
+            throw new Exceptions.UnsupportedAlgorithmException("Unsupported algorithm: " + command.getAlgorithmType());
         }
 
         // Construir opciones de dominio (ids aún no asignadas)
         List<Option> options = command.getOptionValues().stream()
                 .map(v -> new Option(null, v))
-                .collect(Collectors.toList());
+                .toList();
 
         // Construir usuario (por ahora solo id)
         User user = new User();
@@ -51,7 +53,7 @@ public class DecisionService implements MakeDecisionUseCase, GetDecisionHistoryU
         // Elegir ganador por índice (sin depender de ids aún)
         int winnerIndex = algorithm.chooseWinnerIndex(options, command.getAlgorithmDetails());
         if (winnerIndex < 0 || winnerIndex >= options.size()) {
-            throw new com.eojeda89.decididorapi.common.exception.Exceptions.DomainValidationException("Algorithm produced an out-of-range index");
+            throw new Exceptions.DomainValidationException("Algorithm produced an out-of-range index");
         }
 
         // Persistir para obtener ids
@@ -62,14 +64,15 @@ public class DecisionService implements MakeDecisionUseCase, GetDecisionHistoryU
         // Guardar el ganador
         Decision finalized = decisionRepository.save(persisted);
 
-        return new DecisionResult(
-                finalized.getId(),
-                finalized.getWinningOptionId(),
-                finalized.getOptions(),
-                finalized.getAlgorithmType(),
-                finalized.getAlgorithmDetails(),
-                finalized.getCreatedAt()
-        );
+        return DecisionResult.builder()
+                .decisionId(finalized.getId())
+                .winningOptionId(finalized.getWinningOptionId())
+                .winningOptionValue(finalized.getWinningOptionValue())
+                .options(finalized.getOptions())
+                .algorithmType(finalized.getAlgorithmType())
+                .algorithmDetails(finalized.getAlgorithmDetails())
+                .createdAt(finalized.getCreatedAt())
+                .build();
     }
 
     @Override
